# aws-ls-tg-bot

./: .gitignore  Cargo.toml  aws.go  aws_test.go  go.mod  go.sum  main.go  readme.md  unit.go
.github/workflows/: rust.yml
src/: aws.rs  bot.rs  command.rs  lib.rs  main.rs
